updated start token rule and end token rule to support line starts/endings